ul and ol for recipes and steps written in.

--- a/recipes/sschicken.html
+++ b/recipes/sschicken.html
@@ -6,6 +6,49 @@
     </head>
     <body>
         <h1>Sweet and Sour Chicken</h1>
+        <img src="https://www.allrecipes.com/thmb/LRADm21dGZYQSs6RS6EHGDVPuc0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8536-sweet-and-sour-chicken-i-DDMFS-4x3-675ec4938f8d44bfb0d6fb749b12a694.jpg" alt="Sweet and Sour Chicken dish">
+        <h3>Description</h3>
+        <p>Crispy fried chicken pieces with pineapple and bell pepper</p>
+        <p>Served with any tangy and sweet sauce </p>
+        <h3>Ingredients</h3>
+            <ul>
+                 <strong> For the sauce:</strong>
+                <li>    Pineapple,
+                    White sugar,
+                    White Vinegar,
+                    Orange food coloring.
+                </li>
+                    <strong> For the batter:</strong>
+                <li>Cornstarch,
+                    Self-rising flour,
+                    Vegetable oil,
+                    1 Egg,
+                    Salt,
+                    White pepper.
+                </li>
+                    <strong>Chicken</strong>
+                    <li>Cut eight boneless, skinless chicken breast halfes into
+                        1-inch cubes for this sweet and sour recipe.
+
+                    </li>
+                    <strong>Pineapple</strong> and <strong>green pepper:</strong>
+                    <li> Pineapple chunks and two green bell peppers
+                        (cut into 1-inch pieces) give the dish color and flavor.
+
+                    </li>    
+            </ul>        
+    <h3> Steps</h3>            
+            <ol>
+               
+                <li>Boil 1.5 cups of water with pineapple juice, sugar, vinegar, and orange food coloring.</li>
+                <li>Make a cornstarch slurry, then mix it into the sauce until thickened.</li>
+                <li>Make the batter, then stir in the chicken pieces until well coated.</li>
+                <li>Fry the chicken.</li>
+                <li>Layer the peppers, pineapple, and chicken on a platter.</li>
+                <li>Pour the sauce over the top.</li>
+                
+            </ol>
+        <img src="../images/sweet-sour.jpeg" Sweet and sour>
         <p><a href="../index.html">Home</a></p>
     </body>
 </html>
