set up black sal html and cmeatball html framework with links associated to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/sschicken.html"> Sweet and Sour Chicken</a></p>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2F1000logos.net%2Fchef-boyardee-logo%2F&psig=AOvVaw38nTaBcF0uEoS8gkfgIMmy&ust=1750386544403000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMDk1ZS4_I0DFQAAAAAdAAAAABAE">
+        <p><a href="recipes/sschicken.html"> Sweet and Sour Chicken</p>
+        <p><a href="recipes/black-salmon-tacos.html"> Black Salmon Tacos</p>
+        <p><a href="recipes/gcmeatballs.html"> Greek Chicken Meatballs</p>    
     </body>
 </html>
