--- a/recipes/sschicken.html
+++ b/recipes/sschicken.html
@@ -5,7 +5,7 @@
         <title> </title>
     </head>
     <body>
-        <h1>Sweet and Sour Chicken</h1>
+        <h1>Sweet and Sour Chicken Recipe</h1>
         <img src="https://www.allrecipes.com/thmb/LRADm21dGZYQSs6RS6EHGDVPuc0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8536-sweet-and-sour-chicken-i-DDMFS-4x3-675ec4938f8d44bfb0d6fb749b12a694.jpg" alt="Sweet and Sour Chicken dish">
         <h3>Description</h3>
         <p>Crispy fried chicken pieces with pineapple and bell pepper</p>
